Hotfix for previous two commits - WPI-Suite was missing the JavaMail jar it needed to compile

--- a/Core/WPISuite/.classpath
+++ b/Core/WPISuite/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="/PostBoard/src"/>
 	<classpathentry kind="lib" path="/RequirementManager/src"/>
 	<classpathentry kind="lib" path="/WPISuite-Interfaces/src"/>
+	<classpathentry kind="lib" path="/usr/lib/javamail-1.4.7/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
