Fix the compilation error due to javax.mail not being found in the classpath.

--- a/PlanningPoker/build.xml
+++ b/PlanningPoker/build.xml
@@ -5,7 +5,10 @@
        <property name="core-jar-dest" location="${core-lib}/PlanningPoker.jar"/>
        <property name="janeway-jar-dest" location="../Janeway/modules/PlanningPoker.jar"/>
  
+	  
+	
        <path id="classpath">
+       		  <pathelement path="./lib/mail.jar"/>
               <pathelement path="../Janeway/build"/>
               <pathelement path="../Network/build"/>
               <pathelement path="../Core/WPISuite-Interfaces/build"/>
