Sending Email with Start Time Sends an email from Start Timer in the GUI to the team alias.  For some reason requires a seemingly invalid classpath in Janeway/.classpath Signed-out-by: Alec Thompson

--- a/Janeway/build.xml
+++ b/Janeway/build.xml
@@ -2,6 +2,8 @@
 <project name="Janeway" default="compile.deps">
 	<import file="../build-common.xml" />
 	<path id="classpath">
+		<pathelement path="../PlanningPoker/lib/mail.jar"/>
+		<pathelement path="../PlanningPoker/build"/>
 		<pathelement path="../Network/build" />
 		<pathelement path="../Core/WPISuite-Interfaces/build" />
 		<fileset dir="${core-lib}">
