--- a/Janeway/build.xml
+++ b/Janeway/build.xml
@@ -3,7 +3,7 @@
 	<import file="../build-common.xml" />
 	<path id="classpath">
 		<pathelement path="../PlanningPoker/lib/mail.jar"/>
-		<pathelement path="../PlanningPoker/build"/>
+		<!-- <pathelement path="../PlanningPoker/build"/> -->
 		<pathelement path="../Network/build" />
 		<pathelement path="../Core/WPISuite-Interfaces/build" />
 		<fileset dir="${core-lib}">
