Implement serializer and deserializer for PlanningPokerModel

--- a/PlanningPoker/build.xml
+++ b/PlanningPoker/build.xml
@@ -11,6 +11,7 @@
               <pathelement path="../PlanningPoker/lib/mail.jar"/>
               <pathelement path="../Janeway/build"/>
               <pathelement path="../Network/build"/>
+       	      <pathelement path="../RequirementManager/build"/>
               <pathelement path="../Core/WPISuite-Interfaces/build"/>
               <fileset dir="${core-lib}">
                      <include name="gson-*.jar"/>
