--- a/Core/WPISuite/.classpath
+++ b/Core/WPISuite/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="/PostBoard/src"/>
 	<classpathentry kind="lib" path="/RequirementManager/src"/>
 	<classpathentry kind="lib" path="/WPISuite-Interfaces/src"/>
+	<classpathentry kind="lib" path="/PlanningPoker/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
