--- a/PlanningPoker/build.xml
+++ b/PlanningPoker/build.xml
@@ -32,6 +32,9 @@
                            debuglevel="lines,vars,source" includeantruntime="false">
                      <classpath refid="classpath"/>
               </javac>
+			  <copy todir="build">
+				    <fileset dir="src" includes="**/*.png" />
+			  </copy>
        </target>
  
        <!-- Janeway and the Core need to load jars containing our module -->
