--- a/Core/WPISuite/.classpath
+++ b/Core/WPISuite/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="lib" path="/RequirementManager/src"/>
 	<classpathentry kind="lib" path="/WPISuite-Interfaces/src"/>
 	<classpathentry kind="lib" path="/PlanningPoker/src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/PlanningPoker"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
