Change so that the mail.jar file is included when the jar is built, instead of just in the classpath at runtime.

--- a/PlanningPoker/build.xml
+++ b/PlanningPoker/build.xml
@@ -43,7 +43,9 @@
               <jar destfile="${janeway-jar-dest}">
                      <fileset dir="build"/>
                      <fileset file="manifest.txt"/>
+              		<zipgroupfileset dir="lib" includes="*.jar"></zipgroupfileset>
               </jar>
+       		
        </target>
  
        <target name="core-jar" depends="compile-base">
