Fixed closing emails Added email to the getAll overload in the game entity manager, and made sure the mail.jar got added to the PlanningPoker.jar in the core war.
Committed by: Alec Thompson - ajthompson

--- a/PlanningPoker/build.xml
+++ b/PlanningPoker/build.xml
@@ -51,6 +51,7 @@
        <target name="core-jar" depends="compile-base">
               <jar destfile="${core-jar-dest}">
                      <fileset dir="build"/>
+              		 <zipgroupfileset dir="lib" includes="*.jar"></zipgroupfileset>
               </jar>
        </target>
  
