--- a/PlanningPoker/.classpath
+++ b/PlanningPoker/.classpath
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Janeway"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Network"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/WPISuite-Interfaces"/>
-	<classpathentry kind="lib" path="lib/mail.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/RequirementManager"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" path="src" />
+	<classpathentry kind="src" path="test" />
+	<classpathentry kind="con"
+		path="org.eclipse.jdt.launching.JRE_CONTAINER" />
+	<classpathentry combineaccessrules="false" kind="src"
+		path="/Janeway" />
+	<classpathentry combineaccessrules="false" kind="src"
+		path="/Network" />
+	<classpathentry combineaccessrules="false" kind="src"
+		path="/WPISuite-Interfaces" />
+	<classpathentry kind="lib" path="lib/mail.jar" />
+	<classpathentry kind="con"
+		path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4" />
+	<classpathentry combineaccessrules="false" kind="src"
+		path="/RequirementManager" />
+	<classpathentry kind="output" path="bin" />
 </classpath>
