Send instant message notifications Send messages, using the format of the email messages, using the Smack XMPP API to send messages over Google Hangout chat.
Signed off by: ajthompson, rbkillea

--- a/PlanningPoker/.classpath
+++ b/PlanningPoker/.classpath
@@ -7,6 +7,8 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/Network"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WPISuite-Interfaces"/>
 	<classpathentry kind="lib" path="lib/mail.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/smack-3.4.1-0cec571.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/smackx-3.4.1-0cec571.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/RequirementManager"/>
 	<classpathentry kind="output" path="bin"/>
