--- a/PlanningPoker/.classpath
+++ b/PlanningPoker/.classpath
@@ -10,6 +10,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/smack-3.4.1-0cec571.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/smackx-3.4.1-0cec571.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/RequirementManager"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/RequirementManager"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
