--- a/PlanningPoker/build.xml
+++ b/PlanningPoker/build.xml
@@ -25,6 +25,7 @@
        <path id="test-classpath">
               <path refid="classpath"/>
               <pathelement path="build-test"/>
+              <pathelement path="../RequirementManager/build-test"/>
               <pathelement path="${junit-jar}"/>
        </path>
  
