NewGameView changes: - Saving or opening for voting works properly. - There's a description field that will work as soon as the database actually deserializes it. - The date picker is now a pop up.
-- Austin Rose (atrose)

--- a/Janeway/build.xml
+++ b/Janeway/build.xml
@@ -3,6 +3,7 @@
 	<import file="../build-common.xml" />
 	<path id="classpath">
 		<pathelement path="../PlanningPoker/lib/mail.jar"/>
+		<pathelement path="../PlanningPoker/lib/swingx-all-1.6.4.jar"/>
 		<pathelement path="../Network/build" />
 		<pathelement path="../Core/WPISuite-Interfaces/build" />
 		<fileset dir="${core-lib}">
