--- a/PlanningPoker/.classpath
+++ b/PlanningPoker/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/Network"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WPISuite-Interfaces"/>
 	<classpathentry kind="lib" path="lib/mail.jar"/>
+	<classpathentry kind="lib" path="lib/swingx-all-1.6.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/smack-3.4.1-0cec571.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/smackx-3.4.1-0cec571.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
