--- a/PlanningPoker/build.xml
+++ b/PlanningPoker/build.xml
@@ -11,6 +11,7 @@
               <pathelement path="../PlanningPoker/lib/mail.jar"/>
        		  <pathelement path="../PlanningPoker/lib/smack-3.4.1-0cec571.jar"/>
        		  <pathelement path="../PlanningPoker/lib/smackx-3.4.1-0cec571.jar"/>
+       		  <pathelement path="../PlanningPoker/lib/swingx-all-1.6.4.jar"/>
        	      <pathelement path="../RequirementManager/build"/>
               <pathelement path="../Janeway/build"/>
               <pathelement path="../Network/build"/>
